docs/mlflow/mlflow-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow-deployment
  namespace: flowi
  labels:
    app: mlflow
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        image: localhost:32000/mlflow
        ports:
        - containerPort: 5000
