docs/mlflow/mlflow-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mlflow-service
  namespace: flowi
spec:
  selector:
    app: mlflow
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
