docs/mlflow/mlflow-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mlflow
  namespace: flowi
spec:
  hosts:
  - "experiments.flowi.cloud"
  gateways:
  - flowi-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: mlflow
